ensure paddding stays on mobile

--- a/packages/components/src/Card/Card.css
+++ b/packages/components/src/Card/Card.css
@@ -19,9 +19,13 @@
 }
 
 :root :global(.jobber-retheme) .card:not(.clickable) {
-  --card--base-padding: 0;
+  --card--base-padding: var(--space-base);
   --card--border: none;
   --card--header-background: transparent;
+
+  @media (--medium-screens-and-up) {
+    --card--base-padding: 0;
+  }
 }
 
 /* Adjust `Content` components public padding to match the cards */
@@ -73,7 +77,12 @@
 }
 
 :global(.jobber-retheme) .header {
-  padding: var(--space-base) 0;
+  padding: var(--card--base-padding);
+  padding-bottom: 0;
+
+  @media (--medium-screens-and-up) {
+    padding: var(--space-base) 0;
+  }
 }
 
 :global(.jobber-retheme) .header h3 {
